--- a/provisioning/spark-playbook.yaml
+++ b/provisioning/spark-playbook.yaml
@@ -15,16 +15,6 @@
         name: en_GB.UTF-8
         state: present
 
-    - name: Update host file
-      become: yes
-      lineinfile:
-        path: /etc/hosts
-        regexp: '^127\.0\.0\.1'
-        line: '127.0.0.1 localhost {{ansible_hostname}}'
-        owner: root
-        group: root
-        mode: 0644
-
     - name: Install packages
       become: true
       apt: name={{ item }} state=present
@@ -75,39 +65,6 @@
         mode: "u=rwx,g=wx,o=xr"
 
 
-    - name: Add spark-worker.service
-      become: true
-      systemdunit:
-        name: "spark-worker.service"
-        state: present
-        content: |
-          [Unit]
-          Description=Apache Spark Worker Service
-          After=network.target
-          After=systemd-user-sessions.service
-          After=network-online.target
-
-          [Service]
-          User=ubuntu
-          Type=forking
-          ExecStart=/usr/local/spark/spark-2.3.0-bin-hadoop2.7/sbin/start-slave.sh spark://192.168.1.86:7077
-          ExecStop=/usr/local/spark/spark-2.3.0-bin-hadoop2.7/sbin/stop-slaves.sh
-          TimeoutSec=30
-          Restart= on-failure
-          RestartSec= 30
-          StartLimitInterval=350
-          StartLimitBurst=10
-
-          [Install]
-          WantedBy=multi-user.target
-
-    - name: Enable the Spark Worker
-      become: true
-      systemd:
-        name: "spark-worker.service"
-        state: stopped
-        enabled: false
-
     #- name: Ensure data directory exists
     #  file:
     #    path: /home/ubuntu/data
@@ -119,7 +76,8 @@
     - name: Setup the Spark environment file
       copy:
         content: |
-          export SPARK_MASTER_HOST=192.168.1.127
+          export LD_LIBRARY_PATH=$HADOOP_HOME/lib/native/:$LD_LIBRARY_PATH
+          export SPARK_MASTER_HOST=group-2-project-1
           export SPARK_MASTER_PORT=7077
           export PYSPARK_PYTHON=python3
 
@@ -129,7 +87,7 @@
       become: yes
       mount:
         path: /home/ubuntu/data
-        src: 192.168.1.13:/home/ubuntu/data
+        src: group-2-dataset-download:/home/ubuntu/data
         fstype: nfs
         opts: ro,auto,nofail,noatime,nolock,intr,tcp,actimeo=1800
         state: mounted
@@ -164,17 +122,17 @@
     - name: Install a list of spark workers in the Master
       copy:
         content: |
-          localhost
-          192.168.1.138
-          192.168.1.134
-          192.168.1.136
-          192.168.1.124
-          192.168.1.133
-          192.168.1.131
-          192.168.1.132
-          192.168.1.122
-          192.168.1.89
-          192.168.1.128
+          group-2-project-1
+          group-2-project-2
+          group-2-project-3
+          group-2-project-4
+          group-2-project-5
+          group-2-project-6
+          group-2-project-7
+          group-2-project-8
+          group-2-project-9
+          group-2-project-10
+          group-2-project-11
 
         dest: "/usr/local/spark/spark-2.3.0-bin-hadoop2.7/conf/slaves"
 
@@ -208,10 +166,10 @@
       become: true
       systemd:
         name: "spark-master.service"
-        state: stopped
-        enabled: false
+        state: started
+        enabled: true
 
-#    - name: Copy the code
-#      copy:
-#        src: ../
-#        dest: /home/ubuntu/
+   # - name: Copy the code
+   #   copy:
+   #     src: ../
+   #     dest: /home/ubuntu/
